# forge

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS.md  README.md
benches/: data_operations.rs  git_operations.rs
src/: async_task.rs  data.rs  git.rs  key_handler.rs  lib.rs  main.rs  render_context.rs  screen.rs  status_symbols.rs  ui_utils.rs
src/pages/: branch_manager.rs  changes.rs  commit_history.rs  dashboard.rs  help.rs  main_menu.rs  merge_visualizer.rs  mod.rs  module_manager.rs  project_board.rs  settings.rs
src/state/: board.rs  branch_manager.rs  changes.rs  commit_history.rs  dashboard.rs  merge.rs  mod.rs  module_manager.rs
