[package]
name = "forge"
version = "0.2.0"
description = "A Git aware project management system"
authors = ["Prince Lad <ladprince1112@gmail.com>"]
license = "GPL-3.0-only"
edition = "2021"

[[bin]]
name = "forge"
path = "src/main.rs"

[lib]
name = "forge"
path = "src/lib.rs"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
color-eyre = "0.6.5"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
git2 = "0.20.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.43"
crossbeam = "0.8.4"
throbber-widgets-tui = "0.10.0"

[dev-dependencies]
tempfile = "3.24.0"
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "git_operations"
harness = false

[[bench]]
name = "data_operations"
harness = false
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
